force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/refedge__Reference_Request_Account_Contact__c.object-meta.xml
<CustomObject>
    <description>This object holds all the reference request for contacts</description>
    <label>Contact Request</label>
    <nameField>
        <displayFormat>RRAC-{000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>