force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event References</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>