force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Activity_Date__c</fullName>
    <description>Activity Date on Reference Use form; date the Activity occurred.</description>
    <label>Activity date</label>
    <type>Date</type>
</CustomField>