force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>