force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Contact_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact_Request_Status__c</fullName>
    <label>Contact Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Give Up - Legal Won&apos;t Approve</fullName>
            </value>
            <value>
                <fullName>Give Up - Service Issues</fullName>
            </value>
            <value>
                <fullName>Give Up - Contact Left Company</fullName>
            </value>
            <value>
                <fullName>Give Up - Contact Unresponsive</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>