force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Feedback_Response__c.field-meta.xml
<CustomField>
    <fullName>refedge__Feedback_Response__c</fullName>
    <label>Feedback Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>