force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Feedback_Status__c</fullName>
    <label>Use Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use will not occur</fullName>
            </value>
            <value>
                <fullName>Use not yet completed</fullName>
            </value>
            <value>
                <fullName>Use completed - Successful</fullName>
            </value>
            <value>
                <fullName>Use completed - Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>