force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Is_Escalation_to_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Escalation_to_Owner_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated to Manager</label>
    <type>Checkbox</type>
</CustomField>