force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Is_Feedback_Notification_Send__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Feedback_Notification_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Notification Sent</label>
    <type>Checkbox</type>
</CustomField>