force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Is_Reminder_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Reminder_to_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Sent to Owner</label>
    <type>Checkbox</type>
</CustomField>