force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Reference_Request_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Request_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Requests</label>
    <referenceTo>refedge__Reference_Request_Account__c</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Reference_Request_Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>