force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Referenceability_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Referenceability_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referenceability Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>refedge__Referenceability_Type__c.refedge__Project_type__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>refedge__Referenceability_Type__c.refedge__Request_type__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>refedge__Referenceability_Type__c</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>