force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/fields/refedge__Request_notes__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_notes__c</fullName>
    <label>Request notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>