force-app/main/default/objects/refedge__Reference_Request_Account_Contact__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Reference_Request_Account__c</columns>
    <columns>refedge__Contact_Title__c</columns>
    <columns>refedge__Contact_Email__c</columns>
    <columns>refedge__Contact_Phone__c</columns>
    <columns>refedge__Referenceability_Type__c</columns>
    <columns>refedge__Deadline__c</columns>
    <columns>refedge__Feedback_Status__c</columns>
    <columns>refedge__Reference_Use__c</columns>
    <columns>refedge__Is_Feedback_Notification_Send__c</columns>
    <columns>refedge__Task_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>